added debug toolbar + replaced sass compiler

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ STATIC_URL=/static/
 STATIC_ROOT=data/static/
 MEDIA_URL=/media/
 MEDIA_ROOT=data/media/
-INTERNAL_IPS="127.0.0.1"
+INTERNAL_IPS=["127.0.0.1","localhost"]
 SITE_URL=http://localhost:8000
 EMAIL_URL=dummymail://
 DEFAULT_FROM_EMAIL=webmaster@localhost
