--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ mozilla-django-oidc = "^2.0.0"
 django-bootstrap-icons = "^0.7.8"
 django-static-precompiler = {extras = ["libsass"], version = "^2.1"}
 django-debug-toolbar = "^3.4.0"
+django-permissionedforms = "^0.1"
 
 [tool.poetry.dev-dependencies]
 pylint = "^2.14.2"
